# mpi_basics

./: .gitignore  README.md  requirements.txt
cpp/: CMakeLists.txt
cpp/cuda/: README.md  cuda_multiplication.cu  hello_world.cu  nccl_hello_world.cpp  simple_cuda_kernel.cu
cpp/hybrid/: README.md  hybrid_sum.cpp  mpi_sum.cpp  sequential_sum.cpp
cpp/openmp/: README.md  hello_world_openmp.cpp  parallel_sum_vector.cpp  sum_vector.cpp
cpp/src/: hello_world.cpp  mpi_reduce.cpp  reduce.cpp  round_robin.cpp  send_recv.cpp  util.cpp  util.h
python/: README.md  allgather.py  average.py  bcast.py  distributed_mean.py  gather.py  hello_world.py  numpy_with_mpi.py  scatter.py  simple_send_recv.py
python/deep_learning/: README.md  distributed_neural_net.py  distributed_neural_net_pytorch.py  simple_neural_net.py  simple_neural_net_pytorch.py
python/machine_learning/: README.md  distributed_kmeans.py  kmeans.py  util.py
python/machine_learning/docs/: distributed_mean_expl.xlsx
python/relational_algebra/groupby/: groupby_algorithm.md
python/relational_algebra/join/: distributed_join.py  join.py  join_algorithm.md
python/relational_algebra/shuffle/: hash_partitioning_v1.py  hash_partitioning_v2.py  roundrobin_partioning.py  shuffled_numbers.npy
python/shuffle/: datawriter.py  range_partitioning.py
